- Fixed admin page requiments for shipping multiplier and zip code.
- Fixed label for module in table definitions edit screen.
- Fixed choicelist undefined variable problem.
- Fixed Syntax error (spelling) with getUserName common function.
- Fixed undefined variables problem in notes edit page.
- Fixed undefined variable problem with line item autofill.

phpBMS v0.602/ BMS module v0.602
==================================
- Fixed issue with saving new taxarea not stripping out percentage sign
- Fixed reference to images on menu edit screen.
- Fixed menu search functions.
- Fixed importing of initial menu display columns, and searchable fields.
- Fixed saving of times to database incompatibility with some MySQL versions.
- Fixed creation of new invoices and notes from quickview.
- Fixed saving/displaying of monthly repeat options on notes.
- Fixed repeating tasks for marking a parent complete.
- Added date validation when manually typing dates.
- Fixed datepicker problems caused by javascript getmonth() function.
- Fixed datepicker rollover behavior.
- Removed Ability to "pretend to" add/remove lineitems from invoices.
- Refined Snapshot searches for tasks and assignments to one week.
- Fixed errors when print screen has no reports to show (due to access levels).
- Fixed marking repeatable tasks as complete from command drop down.
- Added modifiedby stamp to several command drop down commands.
- Fixed grammar error when dispolay monthly repeat options via javascript.
- Fixed repeat options for "end of month" (e.g. repeat on 31st of every month) scenarios.
- Fixed repeating for tasks from edit screen.
- Fixed changing of repeat options of tasks from edit screen.

phpBMS v0.601/ BMS module v0.601
==================================
- Fixed compatiablity error with older php versions (during update)
- Fixed with quickview not being able to add or edit invoices.
- Fixed invoice search function to use new table schema.
- Updated invoice tax percentages.